<resources>

    <string name="app_name">First Thought</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">First Thought</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button_facebook">Facebook Login</string>
    <string name="login_button_email">Email Login</string>
    <string name="login_button_anonymous">Anonymous Login</string>
    <string name="title_activity_login_email">Login with Email</string>
    <string name="email_hint">john@doe.com</string>
    <string name="go_back">Go back</string>
    <string name="connect">Connect</string>
    <string name="continue_button_label">Continue</string>
    <string name="title_activity_login_email_username">Login with Email</string>
    <string name="username_hint">Name not required</string>
    <string name="network_connection_error">Network Error! Connect your device to the network!</string>
    <string name="server_connection_error">Oops! We cannot connect to the game server! Hopefully we get that back up soon.</string>
    <string name="unexpected_redirect_error">Unexpected redirect. Ensure you are connected to the Internet.</string>
    <string name="title_activity_login_anonymous">Login</string>
    <string name="create_game_usernames_hint">moe, larry, curly</string>
    <string name="play">Play!</string>
    <string name="title_activity_create_game">Create Game</string>
    <string name="title_activity_create_game_usernames">CreateGameUsernamesActivity</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="previous">prev</string>
    <string name="next">next</string>
    <string name="the_word">The word:</string>
    <string name="the_word_hint">Your first thought</string>
    <string name="ok">OK</string>
    <string name="round">Round</string>
    <string name="your_answer">Your answer:</string>
    <string name="provide_an_answer">Provider an answer for this round to move to the next round.</string>

</resources>