<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_screen_ask"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_background">
    
    <TextView 
        android:id="@+id/game_screen_round"
        android:text="@string/round"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_centerHorizontal="true"/>    
    <TextView 
        android:id="@+id/game_screen_round_number"
    	android:textSize="20dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_below="@id/game_screen_round"
        android:layout_centerHorizontal="true"/>
    <Button 
        android:id="@+id/game_screen_round_previous"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/game_screen_round"
        android:layout_alignParentLeft="true"
        android:text="@string/previous"
        android:onClick="loadPreviousRound"/>
    <Button 
        android:id="@+id/game_screen_round_next"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_toRightOf="@id/game_screen_round"
        android:layout_alignParentRight="true"
        android:text="@string/next"
        android:onClick="loadNextRound"/>
    <TextView 
        android:id="@+id/the_word"
        android:text="@string/the_word"
        android:paddingTop="10dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    	android:layout_below="@id/game_screen_round_number"/>
    <TextView 
        android:id="@+id/the_word_label"
    	android:textSize="24dp"
        android:text=""
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    	android:layout_below="@id/the_word"/>
	<TextView 
	    android:id="@+id/the_answer"
	    android:text="@string/your_answer"
	    android:paddingTop="10dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    	android:layout_below="@id/the_word_label"/>
	<TextView 
	    android:id="@+id/the_answer_label"
    	android:textSize="24dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    	android:layout_below="@id/the_answer"/> 
</RelativeLayout>