<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@drawable/background">
    
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="255dp"
        android:layout_height="170dp"
        android:src="@drawable/title_first_thought"/>

    <ImageView 
        android:layout_width="275dp"
        android:layout_height="59dp"
        android:src="@drawable/email_setup_username_1_top"/>

    <FrameLayout 
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/email_setup_2_middle">
        
        <EditText 
            android:id="@+id/username"
            android:layout_gravity="center_horizontal"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:singleLine="true"
        	android:hint="@string/username_hint" />
        
    </FrameLayout>

    <FrameLayout 
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/email_setup_2_middle">
        
        <Button 
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:onClick="goBack"/>
        <Button 
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:onClick="ok"/>
        
    </FrameLayout>
    
    <ImageView 
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:src="@drawable/email_setup_3_bottom"/>    
    
</LinearLayout>
