<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@drawable/background">

    <ImageView 
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:background="@drawable/create_username_game_0_top"/>

    <FrameLayout 
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/create_username_game_1_middle">
        
        <EditText 
            android:id="@+id/game_create_usernames"
            android:layout_gravity="center_horizontal"
        	android:layout_width="175dp"
        	android:layout_height="wrap_content"
        	android:singleLine="false"
        	android:hint="@string/create_game_usernames_hint" />
        
    </FrameLayout>

    <FrameLayout 
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/create_username_game_1_middle">
        
        <Button 
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:onClick="goBack"/>
        <Button 
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:onClick="ok"/>
        
    </FrameLayout>
    
    <ImageView 
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:background="@drawable/create_username_game_2_bottom"/>    
</LinearLayout>